# sfml-base

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  game.cpp  game.h  main.cpp  mainscene.cpp  mainscene.h  scene.h
test/: CMakeLists.txt
test/sample_test/: CMakeLists.txt  main.cpp
